# alic

./: Cargo.toml  README.md  input  output
src/: main.rs
src/compiler/: chunk.rs  customizer.rs  mod.rs  reader.rs  walker.rs  writer.rs
src/compiler/constants/: content.rs  mod.rs  node_kind.rs
tests/: test.rs
tests/common/: mod.rs
tree-sitter-ali/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-ali/bindings/c/: tree-sitter-ali.pc.in
tree-sitter-ali/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-ali/bindings/node/: binding.cc
tree-sitter-ali/bindings/python/tree_sitter_ali/: __init__.py  binding.c
tree-sitter-ali/bindings/rust/: lib.rs
tree-sitter-ali/bindings/swift/TreeSitterAli/: ali.h
tree-sitter-ali/src/: grammar.json  node-types.json  parser.c
tree-sitter-ali/test/: return_statements
tree-sitter-ali/test/corpus/: code  misc  objects  values
