[package]
name = "tree-sitter-ali"
description = "tree-sitter-ali grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter-ali"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ramojus/tree-sitter-ali"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.5"

[build-dependencies]
cc = "1.0"
